tests/vendor/invalid/syntax/do_while_empty_parens.c
//tags: simple, loop
int main() {
    do
        1;
    while ();
    return 0;
}